--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "oracledb": "^6.4.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-virtuoso": "^4.7.7"
+    "react-virtuoso": "^4.7.7",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/node": "^20",
