--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/styles": "^5.15.14",
     "@mui/x-data-grid": "^7.1.0",
     "dotenv": "^16.4.5",
+    "draft-js": "^0.11.7",
+    "dt-sql-parser": "^4.0.0-beta.4.12",
+    "monaco-editor": "^0.47.0",
+    "monaco-editor-webpack-plugin": "^7.1.0",
+    "monaco-sql-languages": "^0.12.0-beta.11",
     "next": "14.1.4",
+    "next-transpile-modules": "^10.0.1",
     "oracledb": "^6.4.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-monaco-editor": "^0.55.0",
     "react-virtuoso": "^4.7.7",
     "yarn": "^1.22.22"
   },
@@ -29,6 +38,7 @@
     "@types/oracledb": "^6.3.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
