--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/styles": "^5.15.14",
@@ -30,20 +31,22 @@
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
     "react-monaco-editor": "^0.55.0",
+    "react-resize-separator": "^1.0.1",
     "react-virtuoso": "^4.7.7",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/oracledb": "^6.3.0",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.75",
+    "@types/react-dom": "^18.2.24",
     "@types/react-draft-wysiwyg": "^1.13.8",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.38",
+    "postcss-nested": "^6.0.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
